# domi-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example..toml  config.example.toml  config.toml  justfile
.github/workflows/: release.yaml
src/: main.rs
